log_output/ex1.11/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: log-output
      port: 3000
      targetPort: 3000
    - name: ping-pong
      port: 3001
      targetPort: 3001
